added JWT token support (#105)
* added JWT token support

* changes

* changes